# test-ooriginal-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: lib.rs  main.rs
src/config/: mod.rs
src/models/: mod.rs  qrcode_models.rs
src/routes/: mod.rs  qrcode_routes.rs
src/services/: mod.rs  qrcode_service.rs
