[package]
name = "ooriginal-qrcode-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
qrcode = "0.12.0"
image = "0.23.14"
base64 = "0.21"